# Sinecraft

./: .gitignore  CMakeLists.txt  README.md  genlut.py
assets-fx/: fxconv-metadata.txt
docs/: CNAME  index.html
src/: camera.c  camera.h  common.c  common.h  config.c  config.h  coords.c  coords.h  crafting.c  crafting.h  credits.c  credits.h  flags.h  inventory.c  inventory.h  items.c  items.h  keys.c  keys.h  lut.c  lut.h  main.c  objects.c  objects.h  physics.c  physics.h  profiling.c  profiling.h  serial.c  serial.h  textures.c  textures.h  ui.c  ui.h  world.c  world.h
